--- a/src/app/components/About/locationSearch/location.module.css
+++ b/src/app/components/About/locationSearch/location.module.css
@@ -149,7 +149,7 @@
     font-family:'Exo',sans-serif;
     font-size: 3rem;
     font-weight: 400;
-    color: #00235d;
+    color: #2086ae;
   }
   @media (min-width: 48em) {
     .Modal_modal__drKVc {
