--- a/src/app/components/Careers/UspGrid/uspGrid.module.css
+++ b/src/app/components/Careers/UspGrid/uspGrid.module.css
@@ -273,7 +273,7 @@
 }
 
 .UspTextCard_card__eKAuC.UspTextCard_light__CLO_8 .UspTextCard_title__HNRuM {
-    color: #00235d;
+    color: #2086ae;
 }
 
 .UspTextCard_card__eKAuC.UspTextCard_light__CLO_8 .UspTextCard_info__KyRMi {
@@ -297,7 +297,7 @@
 }
 
 .UspTextCard_card__eKAuC.UspTextCard_dark__9ID7Z:hover {
-    background-color: #00235d;
+    background-color: #2086ae;
 }
 
 .UspTextCard_card__eKAuC.UspTextCard_gold__MfvRZ {
