--- a/src/app/components/Home/UpsBlock/upsBlock.module.css
+++ b/src/app/components/Home/UpsBlock/upsBlock.module.css
@@ -78,7 +78,7 @@
 }
 
 .UspItem_uspItemText__6aUpv.UspItem_light__BSdNE {
-    color: #00235d;
+    color: #2086ae;
 }
 
 .gold .UspItem_uspItemText__6aUpv {
