--- a/src/app/components/contact/Form/form.module.css
+++ b/src/app/components/contact/Form/form.module.css
@@ -444,11 +444,11 @@
   }
   .Button_primary__b__QL:active .Button_titleWrapper__Glw9g,
   .Button_primary__b__QL:focus .Button_titleWrapper__Glw9g {
-    color: #00235d;
+    color: #2086ae;
   }
   .Button_primary__b__QL:active .Button_icon__Rt_Hz,
   .Button_primary__b__QL:focus .Button_icon__Rt_Hz {
-    background-color: #00235d;
+    background-color: #2086ae;
   }
   .Button_primary__b__QL.Button_darkmode__ozqJQ,
   .darkmode .Button_primary__b__QL {
