--- a/src/app/components/Careers/Hero/hero.module.css
+++ b/src/app/components/Careers/Hero/hero.module.css
@@ -135,8 +135,8 @@
     transform: translateX(-50%);
     width: 100%;
     height: calc(100% + 5rem);
-    background-color: #00235d;
-    background: radial-gradient(circle at 30% 80%, #0040aa 0, #00235d 60%);
+    background-color: #2086ae;
+    background: radial-gradient(circle at 30% 80%, #0040aa 0, #2086ae 60%);
     z-index: -1;
     border-bottom-left-radius: 2.5rem;
   }
