--- a/src/app/components/Home/Blog/blog.module.css
+++ b/src/app/components/Home/Blog/blog.module.css
@@ -318,7 +318,7 @@
     background-color: #2086ae;
   }
   .BlogCarousel_emblabutton__t5aLE:active {
-    background-color: #00235d;
+    background-color: #2086ae;
     transition: scale 0.1s ease-out;
     transform: scale(0.9);
   }
@@ -478,11 +478,11 @@
     z-index: -1;
     width: 100%;
     height: 100%;
-    background-color: #00235d;
+    background-color: #2086ae;
     background: radial-gradient(
       ellipse at bottom center,
       #003690 0,
-      #00235d 100%
+      #2086ae 100%
     );
     transition: background-color 0.3s ease-in-out;
     border-top-right-radius: 6rem;
@@ -730,11 +730,11 @@
   }
   .Button_primary__b__QL:active .Button_titleWrapper__Glw9g,
   .Button_primary__b__QL:focus .Button_titleWrapper__Glw9g {
-    color: #00235d;
+    color: #2086ae;
   }
   .Button_primary__b__QL:active .Button_icon__Rt_Hz,
   .Button_primary__b__QL:focus .Button_icon__Rt_Hz {
-    background-color: #00235d;
+    background-color: #2086ae;
   }
   .Button_primary__b__QL.Button_darkmode__ozqJQ,
   .darkmode .Button_primary__b__QL {
