--- a/src/app/components/Home/CrossLink/crosslink.module.css
+++ b/src/app/components/Home/CrossLink/crosslink.module.css
@@ -200,8 +200,8 @@
 }
 
 .CrosslinkBlock_crosslinkCard__SCoir:nth-child(2) {
-  background-color: #00235d;
-  background: radial-gradient(ellipse at bottom left, #003690 0, #00235d 100%);
+  background-color: #2086ae;
+  background: radial-gradient(ellipse at bottom left, #003690 0, #2086ae 100%);
   border-bottom-left-radius: 2.5rem;
 }
 
@@ -406,11 +406,11 @@
 }
 .Button_primary__b__QL:active .Button_titleWrapper__Glw9g,
 .Button_primary__b__QL:focus .Button_titleWrapper__Glw9g {
-  color: #00235d;
+  color: #2086ae;
 }
 .Button_primary__b__QL:active .Button_icon__Rt_Hz,
 .Button_primary__b__QL:focus .Button_icon__Rt_Hz {
-  background-color: #00235d;
+  background-color: #2086ae;
 }
 .Button_primary__b__QL.Button_darkmode__ozqJQ,
 .darkmode .Button_primary__b__QL {
@@ -627,11 +627,11 @@
 }
 .Button_secondary__8ZLTI:active .Button_titleWrapper__Glw9g,
 .Button_secondary__8ZLTI:focus .Button_titleWrapper__Glw9g {
-  color: #00235d;
+  color: #2086ae;
 }
 .Button_secondary__8ZLTI:active .Button_icon__Rt_Hz,
 .Button_secondary__8ZLTI:focus .Button_icon__Rt_Hz {
-  background-color: #00235d;
+  background-color: #2086ae;
 }
 .Button_secondary__8ZLTI.Button_darkmode__ozqJQ,
 .Button_secondary__8ZLTI:active .Button_icon__Rt_Hz .icon,
@@ -848,7 +848,7 @@
 }
 .Button_tertiary__JUfBS:active .Button_icon__Rt_Hz,
 .Button_tertiary__JUfBS:focus .Button_icon__Rt_Hz {
-  background-color: #00235d;
+  background-color: #2086ae;
 }
 .Button_tertiary__JUfBS.Button_darkmode__ozqJQ .Button_icon__Rt_Hz,
 .darkmode .Button_tertiary__JUfBS .Button_icon__Rt_Hz {
