--- a/src/app/components/Home/Job/job.module.css
+++ b/src/app/components/Home/Job/job.module.css
@@ -30,7 +30,7 @@
     box-shadow: -8px 4px 40px 0 rgba(0, 35, 93, 0.08);
     z-index: 1;
     overflow: hidden;
-    color: #00235d;
+    color: #2086ae;
     cursor: pointer;
     justify-content: flex-start;
 }
@@ -200,7 +200,7 @@
 
 .JobsCard_location__yEXJ5 span {
     font-family: 'Exo', sans-serif;
-    color: #00235d;
+    color: #2086ae;
 }
 
 .JobsCard_seperator__h_YIz {
@@ -325,7 +325,7 @@
 }
 
 .JobsBlock_largeTitle__RYiIZ {
-    color: #00235d;
+    color: #2086ae;
     font-family:'Exo', sans-serif ;
     font-weight: normal;
     font-size: 3rem;
@@ -400,7 +400,7 @@
 }
 
 .JobsBlock_largeTitle__RYiIZ {
-    color: #00235d;
+    color: #2086ae;
     font-family:'Exo', sans-serif ;
     font-weight: normal;
     font-size: 3rem;
@@ -599,11 +599,11 @@
   }
   .Button_primary__b__QL:active .Button_titleWrapper__Glw9g,
   .Button_primary__b__QL:focus .Button_titleWrapper__Glw9g {
-    color: #00235d;
+    color: #2086ae;
   }
   .Button_primary__b__QL:active .Button_icon__Rt_Hz,
   .Button_primary__b__QL:focus .Button_icon__Rt_Hz {
-    background-color: #00235d;
+    background-color: #2086ae;
   }
   .Button_primary__b__QL.Button_darkmode__ozqJQ,
   .darkmode .Button_primary__b__QL {
@@ -821,11 +821,11 @@
   }
   .Button_secondary__8ZLTI:active .Button_titleWrapper__Glw9g,
   .Button_secondary__8ZLTI:focus .Button_titleWrapper__Glw9g {
-    color: #00235d;
+    color: #2086ae;
   }
   .Button_secondary__8ZLTI:active .Button_icon__Rt_Hz,
   .Button_secondary__8ZLTI:focus .Button_icon__Rt_Hz {
-    background-color: #00235d;
+    background-color: #2086ae;
   }
   .Button_secondary__8ZLTI.Button_darkmode__ozqJQ,
   .Button_secondary__8ZLTI:active .Button_icon__Rt_Hz .icon,
