--- a/src/app/components/Home/ctaBlock/ctaBlock.module.css
+++ b/src/app/components/Home/ctaBlock/ctaBlock.module.css
@@ -113,7 +113,7 @@
     font-weight: 500;
     font-size: 3.5rem;
     margin-bottom: auto;
-    color: #00235d;
+    color: #2086ae;
   }
   .CtaBlock_info__DVPeC {
     margin-bottom: 1.5rem;
@@ -396,8 +396,8 @@
   .CtaBlock_dark__Vqkj3 .CtaBlock_background__Goley {
     position: absolute;
     z-index: -1;
-    background-color: #00235d;
-    background: radial-gradient(ellipse at center, #003690 0, #00235d 100%);
+    background-color: #2086ae;
+    background: radial-gradient(ellipse at center, #003690 0, #2086ae 100%);
     height: 60%;
     width: 100%;
     left: 0;
@@ -623,11 +623,11 @@
   }
   .Button_primary__b__QL:active .Button_titleWrapper__Glw9g,
   .Button_primary__b__QL:focus .Button_titleWrapper__Glw9g {
-    color: #00235d;
+    color: #2086ae;
   }
   .Button_primary__b__QL:active .Button_icon__Rt_Hz,
   .Button_primary__b__QL:focus .Button_icon__Rt_Hz {
-    background-color: #00235d;
+    background-color: #2086ae;
   }
   .Button_primary__b__QL.Button_darkmode__ozqJQ,
   .darkmode .Button_primary__b__QL {
