--- a/src/app/components/Home/UpsBlock/upsBlock.module.css
+++ b/src/app/components/Home/UpsBlock/upsBlock.module.css
@@ -114,7 +114,7 @@
 }
 
 .UspItem_light__BSdNE .UspItem_line__xiQ1n {
-    background-color: #2086ae;
+    background-color: #fff;
 }
 
 .gold .UspItem_line__xiQ1n {
