--- a/src/app/components/Home/hero/hero.module.css
+++ b/src/app/components/Home/hero/hero.module.css
@@ -310,7 +310,7 @@
     position: absolute;
     top: 50%;
     height: 50%;
-    background: linear-gradient(180deg, rgba(0, 35, 93, 0), #2086ae 83.89%);
+    background: linear-gradient(180deg, rgba(0, 35, 93, 0), #07455e 70.89%);
 }
 
 .VideoPrimaryHero_imageWrapper__SkScL.VideoPrimaryHero_mask__nIxWs {
