--- a/src/app/components/Home/UpsBlock/upsBlock.module.css
+++ b/src/app/components/Home/UpsBlock/upsBlock.module.css
@@ -61,7 +61,7 @@
 }
 
 .UspItem_uspItemTitle__pyK16.UspItem_light__BSdNE {
-    color: #2086ae;
+    color: #fff;
 }
 
 .UspItem_uspItemText__6aUpv {
@@ -78,7 +78,7 @@
 }
 
 .UspItem_uspItemText__6aUpv.UspItem_light__BSdNE {
-    color: #2086ae;
+    color: #fff;
 }
 
 .gold .UspItem_uspItemText__6aUpv {
