cargo text updated black

--- a/src/app/components/Services/verticalSlider/verticalSlider.module.css
+++ b/src/app/components/Services/verticalSlider/verticalSlider.module.css
@@ -167,6 +167,7 @@
     font-size: large;
     font-weight: 400;
     display: none;
+    color:#000;
   }
   .gold .ServiceSlider_slideInfo__ZrRFv {
     color: #f8e2ac;
