--- a/src/app/components/Home/footer/footer.module.css
+++ b/src/app/components/Home/footer/footer.module.css
@@ -394,3 +394,34 @@
   width: 100%;
   color: #fff;
 }
+
+.flipContainer {
+  position: relative;
+  width: 250px;
+  height: 80px;
+}
+
+.logoImage {
+  position: absolute;
+  width: auto;
+  height: 100%;
+  backface-visibility: hidden;
+  transition: transform 0.6s ease;
+}
+
+.front {
+  transform: rotateY(0deg);
+}
+
+.back {
+  transform: rotateY(180deg);
+}
+
+/* Flip effect on hover */
+.flipContainer:hover .front {
+  transform: rotateY(180deg);
+}
+
+.flipContainer:hover .back {
+  transform: rotateY(0deg);
+}
