--- a/src/app/components/Home/header/header.module.css
+++ b/src/app/components/Home/header/header.module.css
@@ -11,6 +11,20 @@
   transition: background-color 0.3s ease, backdrop-filter 0.3s ease, padding 0.3s ease;
 }
 
+@media (max-width: 48em) {
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: transparent;
+    padding: 2px 8px;
+    height: 6rem;
+    position: relative;
+    z-index: 1000;
+    transition: background-color 0.3s ease, backdrop-filter 0.3s ease, padding 0.3s ease;
+  }
+}
+
 /* Logo */
 .logo img {
   height: 60px;
@@ -28,10 +42,8 @@
 }
 
 .navLinks {
-  list-style: none;
   display: flex;
   gap: 35px;
-  font-family: 'Exo', sans-serif;
 }
 
 .navLinks li {
@@ -40,9 +52,10 @@
 
 .navLinks li a {
   text-decoration: none;
+  marker-start: none;
   font-weight: 800;
-  color: #333;
-  font-size: 1.2rem;
+  color: #f0f0f0;
+  font: 600 1.5rem 'Exo_bold', sans-serif;
   transition: color 0.3s ease, transform 0.3s ease;
 }
 
@@ -175,4 +188,39 @@ body.menu-open {
 
 .cross:hover {
   transform: rotate(90deg);
+}
+
+
+.flipContainer {
+  position: relative;
+  width: 290px;
+  height: 80px;
+}
+
+.logoImage {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  transition: transform 0.6s ease;
+  margin-top: 10px;
+}
+
+.front {
+  transform: rotateY(0deg);
+}
+
+.back {
+  transform: rotateY(180deg);
+  width: 100%;
+  height: 80%;
+}
+
+/* Flip effect on hover */
+.flipContainer:hover .front {
+  transform: rotateY(180deg);
+}
+
+.flipContainer:hover .back {
+  transform: rotateY(0deg);
 }
