--- a/src/app/components/Home/Section/section.module.css
+++ b/src/app/components/Home/Section/section.module.css
@@ -243,6 +243,7 @@
 @media (min-width: 48em) {
     .CtaBlock_videoAnimWrapper__MFcyz {
         aspect-ratio: 968/847;
+        margin-right: 30px;
         width: 100%;
         margin-left: 3rem;
     }
