--- a/src/app/components/Services/hero/hero.module.css
+++ b/src/app/components/Services/hero/hero.module.css
@@ -215,7 +215,6 @@
   color: #fff;
   z-index: 1;
   position: relative;
-  transition: color 0.3s ease-in-out;
 }
 
 
@@ -305,7 +304,7 @@
 
 @media (min-width: 71.3125em) {
   .Hero_content__y4eWy {
-    margin-top: 10.5rem;
+    margin-top: 7.5rem;
     min-height: 22.25rem;
     grid-column: span 6;
   }
@@ -451,7 +450,6 @@
   z-index: 1;
   margin-left: 3rem;
   position: relative;
-  transition: color 0.3s ease-in-out;
 }
 
 .Hero_title__dKRr0,
@@ -460,6 +458,15 @@
   font-size: 4.5rem;
   font-weight: 800;
 }
+
+@media (max-width: 48em) {
+  .Hero_title__dKRr0,
+  .Hero_title__dKRr0 p {
+    margin-top: 8px;
+    font-size: 2.9rem;
+  }
+}
+
 
 .Hero_title__dKRr0 .stroke-text {
   fill-opacity: 0;
