--- a/src/app/components/Services/verticalSlider/verticalSlider.module.css
+++ b/src/app/components/Services/verticalSlider/verticalSlider.module.css
@@ -143,7 +143,8 @@
     z-index: 2;
     position: relative;
   }
-  @media (min-width: 48em) {
+
+  @media (min-width:48em) {
     .ServiceSlider_textWapper__CgzsO {
       width: 100%;
       min-height: 100%;
@@ -157,7 +158,7 @@
     font-family: 'Exo_bold', sans-serif;
     font-size: 4rem;
     font-weight:900;
-  
+
   }
   .gold .ServiceSlider_slideTitle__mTYcM {
     color: #ceaa53;
@@ -175,6 +176,13 @@
   .gold .ServiceSlider_slideInfo__ZrRFv a {
     color: #f8ebcb;
   }
+  @media (max-width: 48em) {
+    .ServiceSlider_slideTitle__mTYcM p {
+      font-size: 2rem;
+    }
+  }
+
+
   @media (min-width: 48em) {
     .ServiceSlider_slideInfo__ZrRFv {
       display: block;
