--- a/src/app/components/About/locationSearch/location.module.css
+++ b/src/app/components/About/locationSearch/location.module.css
@@ -231,7 +231,7 @@
     padding-right: calc(4 * var(--space));
     position: relative;
     min-height: 100%;
-    margin-block: 5rem;
+    margin-block: 10rem;
   }
   @media (min-width: 48em) {
     .LocationSearchBlock_section__gZTHp {
@@ -294,6 +294,7 @@
   .LocationSearchBlock_title__VQf4s {
     color: #fff;
     margin-top: 4.5rem;
+    margin-left: 3rem;
     grid-column: span 4;
     font-family:'Exo',sans-serif;
     font-size: 3rem;
@@ -413,6 +414,7 @@
   flex-direction: column; 
   cursor: pointer;
   padding: 2px;
+  margin-left: 2.8rem;
 }
 
 .CountryTree_continentRight__30OHO {
