--- a/src/app/components/Services/ProductCard/productCards.module.css
+++ b/src/app/components/Services/ProductCard/productCards.module.css
@@ -17,7 +17,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
   }
   
   .card {
@@ -30,7 +30,6 @@
     margin: 10px;
     display: flex;
     flex-direction: column;
-    height: 400px; /* Increased card height */
   }
   
   .card:hover {
@@ -40,7 +39,7 @@
   
   .cardImage {
     width: 100%;
-    height: 250px; /* Increased image height to 250px */
+    height: 250px; 
     object-fit: cover;
     border-bottom: 1px solid #eee;
   }
@@ -54,8 +53,9 @@
   }
   
   .cardTitle {
-    margin-top: 2rem;
-    font: 600 3rem 'Exo_bold', sans-serif;
+    text-transform:uppercase;
+    margin-top: 1rem;
+    font: 600 1rem 'Exo_bold', sans-serif;
     color: #2086ae;
     margin-bottom: 10px;
     text-align: center;
