--- a/src/app/components/Home/Section/section.module.css
+++ b/src/app/components/Home/Section/section.module.css
@@ -143,7 +143,7 @@
     margin-bottom: 2.5rem;
     color: #00112e;
     font-family: 'Exo', sans-serif;
-    font-size: large;
+    font-size: 1.5rem;
 }
 
 .CtaBlock_videoWrapper__ZHqAx {
