--- a/src/app/components/Home/UpsBlock/upsBlock.module.css
+++ b/src/app/components/Home/UpsBlock/upsBlock.module.css
@@ -294,6 +294,7 @@
     gap: 0;
     z-index: 1;
     height: fit-content;
+    margin-top: 2rem;
 }
 
 @media (min-width: 48em) {
@@ -312,12 +313,13 @@
     cursor: pointer;
 }
 .UspBlock_title__5syXk {
-    font-size: 3.5rem;
+    font-size: 3rem;
     grid-column: span 6;
     font-family: 'Exo_bold', sans-serif; 
     font-weight: 900; 
-    /* margin-top: 2rem; */
+    margin-bottom: 2rem;
     color: white;
+
 }
 
 @media (man-width: 48em) {
@@ -336,6 +338,7 @@
     z-index: 1;
     min-height: 14.5rem;
     min-width: 100%;
+    border-radius: 2.5rem;
 }
 
 @media (max-width:48em){
