--- a/src/app/components/Services/ServiceCardBlock/serviceCard.module.css
+++ b/src/app/components/Services/ServiceCardBlock/serviceCard.module.css
@@ -161,7 +161,7 @@
     width: 100%;
     height: inherit;
     overflow: hidden;
-    background-color: #00112e;
+    /* background-color: #00112e; */
   }
   .ServiceCardsBlock_image__Q_8bH {
     width: 100%;
