--- a/src/app/components/Home/UpsBlock/upsBlock.module.css
+++ b/src/app/components/Home/UpsBlock/upsBlock.module.css
@@ -336,17 +336,18 @@
     grid-column: span 4;
     position: relative;
     z-index: 1;
-    min-height: 14.5rem;
+    min-height: 10.5rem;
     min-width: 100%;
     border-radius: 2.5rem;
 }
 
-@media (max-width:48em){
+@media (max-width:38em){
     .paragraph{
+        padding: 5px 30px;
         grid-column: span 4;
-        min-height: 14.5rem;
+        /* min-height: 11.5rem; */
         min-width: 100%;
-        font-size: 3rem;
+        font-size: 2.2rem;
     }
 }
 
