--- a/src/app/components/Home/contact/contactBlock.module.css
+++ b/src/app/components/Home/contact/contactBlock.module.css
@@ -313,6 +313,14 @@
     align-items: baseline;
     gap: 1rem;
   }
+
+  @media (max-width: 30em) {
+    .ContactBlock_title__7ZvTW p {
+      font-size: 2.8rem;
+      flex-wrap: wrap;
+    }
+  }
+
   .ContactBlock_iconWrapper__qtipG {
     width: 3.5rem;
     min-width: 3.5rem;
@@ -337,7 +345,7 @@
     width: 100%;
     height: 100%;
     cursor: pointer;
-    min-height: 20rem;
+    min-height: 14rem;
   }
   @media (min-width: 56.25em) {
     .ContactBlock_getInTouchWrapper__5VNpf {
