--- a/src/app/components/Home/ctaBlock/ctaBlock.module.css
+++ b/src/app/components/Home/ctaBlock/ctaBlock.module.css
@@ -116,6 +116,18 @@
     color: #2086ae;
     padding-bottom: 1rem;
   }
+
+  @media (max-width:30em) {
+    .CtaBlock_title__enemh {
+      font-family: 'Exo_bold', sans-serif;
+      font-weight: 200;
+      font-size: 3.5rem;
+      margin-bottom: auto;
+      color: #2086ae;
+      padding-bottom: 1rem;
+    }
+    
+  }
   .CtaBlock_info__DVPeC {
     margin-bottom: 1.5rem;
     color: #00112e;
@@ -274,17 +286,17 @@
   }
   .CtaBlock_video__xkBJd {
     width: 100%;
-    max-height: remm(847px);
-    max-width: remm(968px);
     aspect-ratio: 968/847;
     height: auto;
     position: absolute;
-    left: 12.5%;
+    /* left: 12.5%; */
     top: 50%;
     transform: translateY(-50%);
     object-fit: fill;
     vertical-align: top;
   }
+
+
   .CtaBlock_video__image__RLW28 {
     width: 125%;
     left: -12.5%;
@@ -400,7 +412,7 @@
     z-index: -1;
     background-color: #2086ae;
     background: radial-gradient(ellipse at center, #003690 0, #2086ae 100%);
-    height: 60%;
+    /* height: 60%; */
     width: 100%;
     left: 0;
     right: 0;
@@ -409,6 +421,7 @@
     border-top-left-radius: 2.5rem;
     border-top-right-radius: 2.5rem;
   }
+  
   @media (min-width: 48em) {
     .CtaBlock_dark__Vqkj3 .CtaBlock_background__Goley {
       top: 0;
@@ -416,7 +429,7 @@
       left: auto;
       right: 0;
       width: 72%;
-      height: 100%;
+      height: 500rem;
       border-radius: 0;
       border-top-left-radius: 6rem;
       border-bottom-left-radius: 6rem;
