--- a/src/app/components/Home/footer/footer.module.css
+++ b/src/app/components/Home/footer/footer.module.css
@@ -102,6 +102,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: 2rem;
   margin-top: 28px;
   flex-wrap: wrap;
@@ -170,10 +171,24 @@
 
 .Footer_socialLinks__zyHKp {
   display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 1rem;
-  align-items: flex-end;
   margin-top: 25px;
 }
+
+@media (max-width:30em) {
+  .Footer_socialLinks__zyHKp {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    margin-left: 7rem;
+    /* margin-top: 25px; */
+  }
+}
+
+
 .Footer_socialLinks__zyHKp a {
   height: 1.5rem;
 }
